clusters/td-cluster/traveldiscover/production/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: le
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entrypoint: websecure
spec:
  rules:
  - host: api.traveldiscover.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: td-backend
            port:
              number: 8080
  tls:
  - hosts:
    - api.traveldiscover.fr
